--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -1,10 +1,10 @@
 <StackLayout >
-    <ListView [items]="myList">
+    <ListView [items]="myList" style="height: 100%;">
         <ng-template let-folder="item" let-index="index">
-            <GridLayout columns="*,*,*,*" rows="*,*" (tap)="showDots(folder)"> 
+            <GridLayout columns="*,*,*,*" rows="*,*" (longPress)="deleteFolder(index)" (tap)="showDots(folder)"> 
                 <Label [text]="folder.title" row="0" column="0" colSpan="3" class="title"></Label>
                 <Label [text]="folder.date" row="1" column="0" colSpan="2"></Label>
-                <Label [text]="index" row="1" column="2"></Label>
+                <Label [text]="folder.id" row="1" column="2"></Label>
                 <FlexboxLayout (tap)="addFolder()" row="0" rowSpan="2" column="3" *ngIf="folder.option"> 
                         <Button text="add folder" ></Button>
                 </FlexboxLayout>
