create page to add new folder to list

--- a/src/app/components/buttons/buttons.component.html
+++ b/src/app/components/buttons/buttons.component.html
@@ -5,7 +5,7 @@
             <Label text="MINHAS PASTAS" textTransform="uppercase" width="30%" textAlignment="center" textWrap="true" style="font-size: 10px; font-weight: bold; color: #264cc7"></Label>
     </StackLayout>
 
-    <StackLayout row="0" column="1" width="100%" (tap)="removeFolder($event)">
+    <StackLayout row="0" column="1" width="100%" (tap)="newPage()">
             <Image src="res://icon" width="50px" textAlignment="center" style="margin-top: 20px"></Image>
             <Label text="compartilhar essa pasta" textTransform="uppercase" width="70%" textAlignment="center" textWrap="true" style="font-size: 10px; font-weight: bold; color: #264cc7"></Label>
     </StackLayout>
