--- a/src/app/browse/browse.component.html
+++ b/src/app/browse/browse.component.html
@@ -12,10 +12,13 @@
     <ActionItem icon="res://menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()"
         ios.position="left">
     </ActionItem>
-    <Label text="Browse"></Label>
+    <Label text="add new folder"></Label>
 </ActionBar>
 
-<GridLayout class="page__content">
-    <Label class="page__content-icon far" text="&#xf1ea;"></Label>
-    <Label class="page__content-placeholder" text="<!-- Page content goes here -->"></Label>
-</GridLayout>
+<stackLayout >
+    
+        <TextField hint="Folder Title" [(ngModel)]="folderTitle"></TextField>
+
+        <Button class="newFolder" text="create new folder" (tap)="addFolder()"></Button>
+    
+</stackLayout>
