--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -3,18 +3,24 @@
             <Image src="res://icon" ></Image>
             <Label class="warning" text="Empty List"></Label>
     </StackLayout>
-    
 
-    <ListView [items]="myList" style="height: 100%;" *ngIf="!listService._isEmpty">
-        <ng-template let-folder="item" let-index="index">
-            <GridLayout columns="*,*,*,*" rows="*,*" (longPress)="deleteFolder(index)" (tap)="showDots(folder)"> 
-                <Label [text]="folder.title" row="0" column="0" colSpan="3" class="title"></Label>
-                <Label [text]="folder.lastModification | date:'medium'" row="1" column="0" colSpan="2"></Label>
-                <Label [text]="folder.id" row="1" column="2"></Label>
-                <FlexboxLayout (tap)="addFolder()" row="0" rowSpan="2" column="3" *ngIf="folder.option"> 
-                        <Button text="add folder" ></Button>
-                </FlexboxLayout>
-            </GridLayout>
-        </ng-template>
-    </ListView>
+    <GridLayout rows="auto, *" *ngIf="!listService._isEmpty">
+        
+        <!-- <SearchBar row="0" hint="Search hint" [text]="searchPhrase" (submit)="onSearchSubmit($event)"></SearchBar> -->
+
+        <ListView row="1" [items]="myList" style="height: 100%;" >
+            <ng-template let-folder="item" let-index="index">
+                <GridLayout columns="*,*,*,*" rows="*,*" (longPress)="deleteFolder(index)" (tap)="showDots(folder)"> 
+                    <Label [text]="folder.title" row="0" column="0" colSpan="3" class="title"></Label>
+                    <Label [text]="folder.lastModification | date:'medium'" row="1" column="0" colSpan="2"></Label>
+                    <Label [text]="folder.id" row="1" column="2"></Label>
+                    <FlexboxLayout row="0" rowSpan="2" column="3" *ngIf="folder.option"> 
+                            <Button text="add folder" ></Button>
+                    </FlexboxLayout>
+                </GridLayout>
+            </ng-template>
+        </ListView>
+    </GridLayout>
+
+    
 </StackLayout>
