--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -4,19 +4,32 @@
             <Label class="warning" text="Empty List"></Label>
     </StackLayout>
 
-    <GridLayout rows="auto, *" *ngIf="!listService._isEmpty">
+    <GridLayout rows="auto, *, auto" *ngIf="!listService._isEmpty" >
         <!-- <SearchBar row="0" hint="Search hint" [text]="searchPhrase" (submit)="onSearchSubmit($event)"></SearchBar> -->
-        <ListView row="1" [items]="myList" style="height: 100%;" >
+        <ListView row="1" [items]="myList" style="height: 100%;">
             <ng-template let-folder="item" let-index="index">
                 <GridLayout columns="*,*,*,*" rows="*,*" (longPress)="deleteFolder(index)" (tap)="showDots(folder)"> 
                     <Label [text]="folder.title" row="0" column="0" colSpan="3" class="title"></Label>
                     <Label [text]="folder.lastModification | date:'medium'" row="1" column="0" colSpan="2"></Label>
                     <Label [text]="folder.id" row="1" column="2"></Label>
-                    <FlexboxLayout row="0" rowSpan="2" column="3" *ngIf="folder.option" (tap)="addFolder()"> 
+                    <FlexboxLayout row="0" rowSpan="2" column="3" *ngIf="folder.option" (tap)="dotsActive = !dotsActive"> 
                         <Image src="res://ellipsis" width="50%" alt="ellipsis"></Image>
                     </FlexboxLayout>
                 </GridLayout>
             </ng-template>
         </ListView>
+
+        <StackLayout row="2" style="background-color: #f5f5f5; height: 200;" *ngIf="dotsActive">
+            <Label text="hey" style="text-align: center;"></Label>
+            <Label text="hey" style="text-align: center;"></Label>
+            <Label text="hey" style="text-align: center;"></Label>
+            <Label text="hey" style="text-align: center;"></Label>
+            <Label text="hey" style="text-align: center;"></Label>
+            <Label text="hey" style="text-align: center;"></Label>
+            <Label text="hey" style="text-align: center;"></Label>
+            <Label text="hey" style="text-align: center;"></Label>
+        </StackLayout>
+
     </GridLayout>
 </StackLayout>
+
