--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -20,9 +20,9 @@
         </FlexboxLayout>
 
         <StackLayout column="1" orientation="horizontal" horizontalAlignment="center" verticalAlignment="center">
-            <Label text="hey"></Label>
-            <Label text="hey"></Label>
-            <Label text="hey"></Label>
+            <Label text="4" ></Label>
+            <Image src="res://icon" width="50" alt="logo"></Image>
+            <Image src="res://ellipsis" style="transform: rotate(90deg);" width="40" alt="logo"></Image>
         </StackLayout>
 
     </GridLayout>
