--- a/src/app/browse/browse.component.html
+++ b/src/app/browse/browse.component.html
@@ -21,7 +21,7 @@
 
     <Button class="newFolder" text="create new folder" (tap)="addFolder()"></Button>
 
-    <Button style="color: blue" text="back" (tap)="goBack()"></Button>
+    <Button style="color: blue" text="cancel" (tap)="goBack()"></Button>
 
     <Label class="invalidInput" text="Invalid Input" *ngIf="invalid"></Label>
 
