--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -5,7 +5,13 @@
     </StackLayout>
 
     <GridLayout rows="auto, *, auto" *ngIf="!listService._isEmpty" >
-        <!-- <SearchBar row="0" hint="Search hint" [text]="searchPhrase" (submit)="onSearchSubmit($event)"></SearchBar> -->
+        
+        <SearchBar row="0" 
+            hint="Buscar arquivos ou pastas"
+            [text]="searchPhrase" (textChange)="onTextChanged($event)" 
+            (clear)="onClear($event)" (submit)="onSubmit($event)">
+        </SearchBar>
+
         <ListView row="1" [items]="myList" style="height: 100%;">
             <ng-template let-folder="item" let-index="index">
                 <GridLayout columns="auto,*,*,*,auto" rows="*,*" (longPress)="deleteFolder(index)" (tap)="showDots(folder)"> 
@@ -20,7 +26,8 @@
             </ng-template>
         </ListView>
 
-        <StackLayout row="2" style="background-color: #f5f5f5; height: 200;" *ngIf="dotsActive">
+        
+        <!-- <StackLayout row="2" style="background-color: #f5f5f5; height: 200;" *ngIf="dotsActive">
             <Label text="Compartilhar" style="text-align: center;"></Label>
             <Label text="Compartilhar" style="text-align: center;"></Label>
             <Label text="Compartilhar" style="text-align: center;"></Label>
@@ -29,7 +36,7 @@
             <Label text="Compartilhar" style="text-align: center;"></Label>
             <Label text="Compartilhar" style="text-align: center;"></Label>
             <Label text="Compartilhar" style="text-align: center;"></Label>
-        </StackLayout>
+        </StackLayout> -->
 
     </GridLayout>
 </StackLayout>
